Catálogo de vuelos
Primera versión de conexión entre agencias y aerolíneas para mostrar los vuelos disponibles

--- a/AGENCIAS/backend/.env
+++ b/AGENCIAS/backend/.env
@@ -1,7 +1,19 @@
 MONGO_URI="mongodb+srv://kdieguez_db_user:Katmongo2@agencia.skl6hzj.mongodb.net/?retryWrites=true&w=majority&appName=Agencia"
 MONGO_DB="agencia_viajes"
+
+# CORS para el frontend
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
+# Captcha
 CAPTCHA_DISABLED=false
 CAPTCHA_SECRET=6LdZVMwrAAAAAAbcHdKSVgO5aVnJpXsvaP0V2lvR
-JWT_SECRET="super-secreto-dev"
-JWT_ALG="HS256"
+
+# Auth
+JWT_SECRET=super-secreto-dev
+JWT_ALG=HS256
 JWT_EXPIRES_MIN=60
+
+# Aerolíneas 
+AEROLINEAS_API_URL=http://localhost:8080
+ESTADO_CANCELADO_ID=2
+ESTADO_CANCELADO_TXT=CANCELADO
