--- a/AGENCIAS/backend/.env
+++ b/AGENCIAS/backend/.env
@@ -17,3 +17,11 @@ JWT_EXPIRES_MIN=60
 AEROLINEAS_API_URL=http://localhost:8080
 ESTADO_CANCELADO_ID=2
 ESTADO_CANCELADO_TXT=CANCELADO
+
+# Correo
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=pinkklemond@gmail.com
+SMTP_PASS=drexdy0202
+SMTP_FROM=Agencia Viajes <pinkklemond@gmail.com>
+SMTP_USE_TLS=true
