--- a/AGENCIAS/backend/.env
+++ b/AGENCIAS/backend/.env
@@ -1,5 +1,6 @@
-MONGO_URI="mongodb+srv://kdieguez_db_user:Katmongo2@agencia.skl6hzj.mongodb.net/?retryWrites=true&w=majority&appName=Agencia"
-MONGO_DB="agencia_viajes"
+
+MONGODB_URI=mongodb://kdieguez_db_user:Katmongo2@ac-enhhafm-shard-00-02.skl6hzj.mongodb.net:27017/?tls=true&authSource=admin&retryWrites=true&w=majority&directConnection=true
+MONGODB_DB=agencia_viajes
 
 # CORS para el frontend
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
