--- a/AGENCIAS/backend/.env
+++ b/AGENCIAS/backend/.env
@@ -1,21 +1,25 @@
-
+#  MONGO
 MONGODB_URI=mongodb://kdieguez_db_user:Katmongo2@ac-enhhafm-shard-00-02.skl6hzj.mongodb.net:27017/?tls=true&authSource=admin&retryWrites=true&w=majority&directConnection=true
 MONGODB_DB=agencia_viajes
 
-# CORS para el frontend
+# CORS
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
-# Captcha
+# CAPTCHA
 CAPTCHA_DISABLED=false
 CAPTCHA_SECRET=6LdZVMwrAAAAAAbcHdKSVgO5aVnJpXsvaP0V2lvR
 
-# Auth
+# JWT
 JWT_SECRET=super-secreto-dev
 JWT_ALG=HS256
 JWT_EXPIRES_MIN=60
 
-# Aerolíneas 
+# Aerolíneas
 AEROLINEAS_API_URL=http://localhost:8080
+AEROLINEAS_TIMEOUT=15
+AEROLINEAS_FALLBACK_USER_ID=1
+
+# Estados de reserva
 ESTADO_CANCELADO_ID=2
 ESTADO_CANCELADO_TXT=CANCELADO
 
