Paginas Informativas Aerolíneas
Se crearon las páginas informativas editables del sistema de aerolíneas

--- a/CENTRAL/.env
+++ b/CENTRAL/.env
@@ -1,3 +1,13 @@
-MONGO_URI=mongodb+srv://dnatareno_db_user:wHnSp8VzUU7sAgFZ@centralcluster.xg2nkce.mongodb.net/?retryWrites=true&w=majority&appName=CentralCluster
+MONGO_URI=mongodb://dnatareno_db_user:wHnSp8VzUU7sAgFZ@ac-jkzjma5-shard-00-00.xg2nkce.mongodb.net:27017,ac-jkzjma5-shard-00-01.xg2nkce.mongodb.net:27017,ac-jkzjma5-shard-00-02.xg2nkce.mongodb.net:27017/central?tls=true&replicaSet=atlas-jkzjma-shard-0&authSource=admin&retryWrites=true&w=majority
+
+
 MONGO_DB=central
+
 ADMIN_KEY=wHnSp8VzUU7sAgFZ
+
+ORACLE_DBA_DSN=localhost:1521/XEPDB1
+ORACLE_DBA_USER=AEROLINEA
+ORACLE_DBA_PASS=Aero123
+ORACLE_DBA_MODE=NORMAL
+ORACLE_TEMPLATE_SCHEMA=AEROLINEA
+ORACLE_PDB=XEPDB1
