Prueba cancelación de compras
prueba cancelación

--- a/AGENCIAS/backend/.env
+++ b/AGENCIAS/backend/.env
@@ -1,9 +1,9 @@
 #  MONGO
-MONGODB_URI=mongodb://kdieguez_db_user:Katmongo2@ac-enhhafm-shard-00-02.skl6hzj.mongodb.net:27017/?tls=true&authSource=admin&retryWrites=true&w=majority&directConnection=true
+MONGODB_URI=mongodb+srv://kdieguez_db_user:Katmongo2@agencia.skl6hzj.mongodb.net/?appName=Agencia
 MONGODB_DB=agencia_viajes
 
 # CORS
-ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+ALLOWED_ORIGINS=http://localhost:5174,http://127.0.0.1:5174
 
 # CAPTCHA
 CAPTCHA_DISABLED=false
@@ -16,7 +16,7 @@ JWT_EXPIRES_MIN=60
 
 # Aerolíneas
 AEROLINEAS_API_URL=http://localhost:8080
-AEROLINEAS_TIMEOUT=15
+AEROLINEAS_TIMEOUT=10
 AEROLINEAS_FALLBACK_USER_ID=1
 
 # Estados de reserva
