--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,8 +15,8 @@ WORKDIR /app
 
 COPY --from=build /app/target/aerolineas-backend-1.0.0.jar app.jar
 
-ENV ORACLE_USER=APP_DEV
-ENV ORACLE_PASSWORD=Dev123
+ENV ORACLE_USER=APP_PROD
+ENV ORACLE_PASSWORD=Prod123
 ENV ORACLE_CONNECT_STRING=oracle-xe:1521/XEPDB1
 ENV SERVER_PORT=8083
 
