--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,6 +25,14 @@
     <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     <exec-maven-plugin.version>3.2.0</exec-maven-plugin.version>
     <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
+
+    <!-- *** NUEVO: versiones para testing *** -->
+    <junit.jupiter.version>5.10.2</junit.jupiter.version>
+    <mockito.version>5.12.0</mockito.version>
+    <mockito.junit.jupiter.version>5.12.0</mockito.junit.jupiter.version>
+    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+    <mockito.inline.version>5.2.0</mockito.inline.version>
   </properties>
 
   <dependencies>
@@ -118,6 +126,40 @@
       <version>0.12.5</version>
       <scope>runtime</scope>
     </dependency>
+
+    <!-- JUnit 5 (Jupiter) -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito núcleo -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito + JUnit 5 -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito.junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <!-- Mockito inline: para mocks estáticos (DB.getConnection, DB.table, etc.) -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>${mockito.inline.version}</version> 
+      <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -159,6 +201,45 @@
                 </transformer>
               </transformers>
             </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- ======================= -->
+      <!-- NUEVOS PLUGINS DE TEST  -->
+      <!-- ======================= -->
+
+      <!-- Ejecutar tests con JUnit 5 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <!-- Evita problemas con el module-path en algunos entornos -->
+          <useModulePath>false</useModulePath>
+        </configuration>
+      </plugin>
+
+      <!-- JaCoCo: cobertura de código -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco-maven-plugin.version}</version>
+        <executions>
+          <!-- Adjuntar el agente antes de los tests -->
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <!-- Generar reporte después de correr los tests -->
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
