--- a/.drone.yml
+++ b/.drone.yml
@@ -13,18 +13,21 @@ steps:
         from_secret: sonar_host_url
     commands:
       - cd backend
-      - mvn clean verify sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
+      - mvn clean verify sonar:sonar \
+          -Dsonar.login=$SONAR_TOKEN \
+          -Dsonar.host.url=$SONAR_HOST_URL \
+          -Dsonar.qualitygate.wait=true
     when:
       event:
         - push
         - pull_request
-   - name: frontend-tests
-     image: node:20
-     commands:
+
+  - name: frontend-tests
+    image: node:20
+    commands:
       - cd frontend
       - npm ci
       - npm test
-
     when:
       event:
         - push
@@ -44,7 +47,7 @@ steps:
       - docker build -t aerolineas-frontend-prod ./frontend
     when:
       event:
-        - push   # solo cuando ya se hace push a main (después del merge)
+        - push     # solo corre cuando ya se hizo push (después del merge)
 
   - name: deploy-prod
     image: docker:26-cli
@@ -53,17 +56,11 @@ steps:
     commands:
       - docker stop backend-prod frontend-prod || true
       - docker rm backend-prod frontend-prod || true
-
-      - docker run -d --name backend-prod \
-          -p 8083:8080 \
-          aerolineas-backend-prod
-
-      - docker run -d --name frontend-prod \
-          -p 8086:80 \
-          aerolineas-frontend-prod
+      - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
+      - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
     when:
       event:
-        - push   # igual, solo en push (no en pull_request)
+        - push     # igual, solo en push, no en pull_request
 
 services:
   - name: docker
