--- a/.drone.yml
+++ b/.drone.yml
@@ -13,10 +13,7 @@ steps:
         from_secret: sonar_host_url
     commands:
       - cd backend
-      - mvn clean verify sonar:sonar \
-          -Dsonar.login=$SONAR_TOKEN \
-          -Dsonar.host.url=$SONAR_HOST_URL \
-          -Dsonar.qualitygate.wait=true
+      - mvn clean verify sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
     when:
       event:
         - push
@@ -33,7 +30,6 @@ steps:
         - push
         - pull_request
 
-
   - name: build-images-prod
     image: docker:26-cli
     environment:
@@ -48,7 +44,7 @@ steps:
       - docker build -t aerolineas-frontend-prod ./frontend
     when:
       event:
-        - push     # solo corre cuando ya se hizo push (después del merge)
+        - push   # solo en push (después del merge a main)
 
   - name: deploy-prod
     image: docker:26-cli
@@ -57,11 +53,17 @@ steps:
     commands:
       - docker stop backend-prod frontend-prod || true
       - docker rm backend-prod frontend-prod || true
-      - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
-      - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
+
+      - docker run -d --name backend-prod \
+          -p 8083:8080 \
+          aerolineas-backend-prod
+
+      - docker run -d --name frontend-prod \
+          -p 8086:80 \
+          aerolineas-frontend-prod
     when:
       event:
-        - push     # igual, solo en push, no en pull_request
+        - push   # igual, solo en push (no en pull_request)
 
 services:
   - name: docker
