--- a/.drone.yml
+++ b/.drone.yml
@@ -1,15 +1,10 @@
 ---
 kind: pipeline
 type: docker
-name: prod
-
-# Usar el Docker del host
-volumes:
-  - name: dockersock
-    host:
-      path: /var/run/docker.sock
+name: prod   # main = prod
 
 steps:
+  # 1) BACKEND: tests + SonarQube (Quality Gate obligatorio)
   - name: backend-tests-and-sonar
     image: maven:3.9-eclipse-temurin-17
     environment:
@@ -19,12 +14,18 @@ steps:
         from_secret: sonar_host_url
     commands:
       - cd backend
-      - mvn clean verify sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
+      - mvn clean verify sonar:sonar \
+          -Dsonar.login=$SONAR_TOKEN \
+          -Dsonar.host.url=$SONAR_HOST_URL \
+          -Dsonar.qualitygate.wait=true
     when:
+      branch:
+        - main
       event:
         - push
         - pull_request
 
+  # 2) FRONTEND: tests con Vitest
   - name: frontend-tests
     image: node:20
     commands:
@@ -32,10 +33,13 @@ steps:
       - npm ci
       - npm test
     when:
+      branch:
+        - main
       event:
         - push
         - pull_request
 
+  # 3) SOLO EN MERGE A MAIN: construir imágenes de prod
   - name: build-images-prod
     image: docker:26-cli
     volumes:
@@ -45,9 +49,12 @@ steps:
       - docker build -t aerolineas-backend-prod ./backend
       - docker build -t aerolineas-frontend-prod ./frontend
     when:
+      branch:
+        - main
       event:
-        - push   # solo cuando ya se hace push a main
+        - push
 
+  # 4) SOLO EN MERGE A MAIN: desplegar prod (backend-prod + frontend-prod)
   - name: deploy-prod
     image: docker:26-cli
     volumes:
@@ -56,12 +63,27 @@ steps:
     commands:
       - docker stop backend-prod frontend-prod || true
       - docker rm backend-prod frontend-prod || true
-      - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
-      - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
-    when:
-      event:
-        - push   # solo en push, no en pull_request
 
+      - docker run -d --name backend-prod \
+          -p 8083:8080 \
+          aerolineas-backend-prod
+
+      - docker run -d --name frontend-prod \
+          -p 8086:80 \
+          aerolineas-frontend-prod
+    when:
+      branch:
+        - main
+      event:
+        - push
+
+# Usamos el Docker del HOST (no Docker Hub, no dind)
+volumes:
+  - name: dockersock
+    host:
+      path: /var/run/docker.sock
+
+# Este pipeline solo se ejecuta cuando se toca main
 trigger:
   branch:
     - main
