--- a/.drone.yml
+++ b/.drone.yml
@@ -13,20 +13,14 @@ steps:
         from_secret: sonar_host_url
     commands:
       - cd backend
-      # Tests backend
-      - mvn -B clean verify -DskipTests=false
-      # Análisis Sonar + Quality Gate
-      - mvn -B sonar:sonar \
-          -DskipTests=false \
-          -Dsonar.login=$SONAR_TOKEN \
-          -Dsonar.host.url=$SONAR_HOST_URL \
-          -Dsonar.qualitygate.wait=true
+      # Tests + Sonar + Quality Gate en un solo comando
+      - mvn -B -DskipTests=false clean verify sonar:sonar -Dsonar.login=$SONAR_TOKEN -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.qualitygate.wait=true
     when:
       branch:
         - main          # prod = main
       event:
         - push
-        - pull_request  # también en PR
+        - pull_request  # también cuando es PR
 
   - name: frontend-tests
     image: node:20
@@ -61,7 +55,7 @@ steps:
     commands:
       - docker stop backend-prod frontend-prod || true
       - docker rm backend-prod frontend-prod || true
-      # OJO: aquí sin backslashes, todo en una sola línea
+      # OJO: todo en una sola línea, sin '\'
       - docker run -d --name backend-prod -p 8083:8080 aerolineas-backend-prod
       - docker run -d --name frontend-prod -p 8086:80 aerolineas-frontend-prod
     when:
@@ -75,7 +69,7 @@ services:
     image: docker:26-dind
     privileged: true
     environment:
-      DOCKER_TLS_CERTDIR: ""   # importante para usar tcp://docker:2375
+      DOCKER_TLS_CERTDIR: ""
 
 trigger:
   branch:
